@@ -35,6 +35,7 @@ import org.geysermc.geyser.util.FileUtils;
 
 public class PacketRegistryPopulator {
 
+    @SuppressWarnings("unchecked")
     public static void populate() {
         for (Class<?> clazz : FileUtils.getGeneratedClassesForAnnotation(Translator.class)) {
             Class<?> packet = clazz.getAnnotation(Translator.class).packet();
@@ -44,18 +45,18 @@ public class PacketRegistryPopulator {
             try {
                 if (Packet.class.isAssignableFrom(packet)) {
                     Class<? extends Packet> targetPacket = (Class<? extends Packet>) packet;
-                    PacketTranslator<? extends Packet> translator = (PacketTranslator<? extends Packet>) clazz.newInstance();
+                    PacketTranslator<? extends Packet> translator = (PacketTranslator<? extends Packet>) clazz.getConstructor().newInstance();
 
                     Registries.JAVA_PACKET_TRANSLATORS.register(targetPacket, translator);
                 } else if (BedrockPacket.class.isAssignableFrom(packet)) {
                     Class<? extends BedrockPacket> targetPacket = (Class<? extends BedrockPacket>) packet;
-                    PacketTranslator<? extends BedrockPacket> translator = (PacketTranslator<? extends BedrockPacket>) clazz.newInstance();
+                    PacketTranslator<? extends BedrockPacket> translator = (PacketTranslator<? extends BedrockPacket>) clazz.getConstructor().newInstance();
 
                     Registries.BEDROCK_PACKET_TRANSLATORS.register(targetPacket, translator);
                 } else {
                     GeyserImpl.getInstance().getLogger().error("Class " + clazz.getCanonicalName() + " is annotated as a translator but has an invalid target packet.");
                 }
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (Exception e) {
                 GeyserImpl.getInstance().getLogger().error("Could not instantiate annotated translator " + clazz.getCanonicalName());
             }
         }
